Fixed overflow of pokemon names at smaller screen sizes for mobiles devices. Also added a favicon

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -6,11 +6,6 @@
     .opponent, .user{
         height: 25vh;
     };
-    .userName, .opponentName{
-        h2{
-            width: 50%;
-        };
-    };
     @keyframes fa-solid {
         /* start of animation */
         0% {
